# Pastify

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HistoryList.tsx  PreviewModal.tsx  SearchBar.tsx  SettingsPanel.tsx
src/store/: clipboardStore.ts
src/styles/: global.css
