[package]
name = "pastify"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["api-all", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
once_cell = "1.19"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.3"
image = { version = "0.24", features = ["png"] }
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"
base64 = "0.22"
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem"
] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
